fixed Console.getJavaInstances() so that it returns a mapping of "jython name" to "java instance" (which fixes the LinearCombo control) [0]