@@ -53,6 +53,8 @@ import javax.swing.JTabbedPane;
 import org.python.core.PyDictionary;
 import org.python.core.PyFloat;
 import org.python.core.PyInteger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import visad.ConstantMap;
 import visad.Data;
@@ -82,12 +84,31 @@ import edu.wisc.ssec.mcidasv.jython.ConsoleCallback;
 
 public class LinearCombo extends HydraControl implements ConsoleCallback {
 
-    public static final String HYDRA_HELP_ID = "idv.controls.hydra.linearcombinationcontrol";
-    
-    public static final String HYDRA_SRC = "/edu/wisc/ssec/mcidasv/resources/python/linearcombo/hydra.py";
+    /** Trusty logging object. */
+    private static final Logger logger = LoggerFactory.getLogger(LinearCombo.class);
+
+    /** Help topic identifier. */
+    public static final String HYDRA_HELP_ID = 
+        "idv.controls.hydra.linearcombinationcontrol";
+
+    /** 
+     * Path to the Jython source code that allows for interaction with a 
+     * linear combination display control.
+     */
+    public static final String HYDRA_SRC = 
+        "/edu/wisc/ssec/mcidasv/resources/python/linearcombo/hydra.py";
+
+    /** Name used in Jython namespace to refer to the {@literal "IDV god object"}. */
     public static final String CONSOLE_IDV_OBJECT = "_idv";
+
+    /** 
+     * Name used in Jython namespace to refer back to an instantiation of a 
+     * linear combination control.
+     */
     public static final String CONSOLE_CONTROL_OBJECT = "_linearCombo";
+
     public static final String CONSOLE_OBJECT = "_jythonConsole";
+
     public static final String CONSOLE_DATA_OBJECT = "_data";
 
     private Console console;
@@ -102,16 +123,23 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
 
     private MultiSpectralDataSource source;
 
-    private List<String> jythonHistory = new ArrayList<String>();
+    private List<String> jythonHistory;
 
-    private Map<String, Selector> selectorMap = new HashMap<String, Selector>();
-    private Map<String, Selector> jythonMap = new HashMap<String, Selector>();
+    private Map<String, Selector> selectorMap;
+
+    private Map<String, Selector> jythonMap;
 
     private DataChoice dataChoice = null;
 
+    /**
+     * 
+     */
     public LinearCombo() {
         super();
         setHelpUrl(HYDRA_HELP_ID);
+        jythonHistory = new ArrayList<String>();
+        selectorMap = new HashMap<String, Selector>();
+        jythonMap = new HashMap<String, Selector>();
     }
 
     @Override public boolean init(final DataChoice choice) throws VisADException, RemoteException {
@@ -133,10 +161,6 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         console = new Console();
         console.setCallbackHandler(this);
 
-//        console.injectObject(CONSOLE_IDV_OBJECT, new PyJavaInstance(getIdv()));
-//        console.injectObject(CONSOLE_CONTROL_OBJECT, new PyJavaInstance(this));
-//        console.injectObject(CONSOLE_OBJECT, new PyJavaInstance(console));
-//        console.injectObject(CONSOLE_DATA_OBJECT, new PyJavaInstance(source.getMultiSpectralData(choice)));
         console.injectObject(CONSOLE_IDV_OBJECT, getIdv());
         console.injectObject(CONSOLE_CONTROL_OBJECT, this);
         console.injectObject(CONSOLE_OBJECT, console);
@@ -153,13 +177,14 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
     }
 
     @Override public void initDone() {
-        MapViewManager viewManager = (MapViewManager) getViewManager();
+        MapViewManager viewManager = (MapViewManager)getViewManager();
         MapProjectionDisplay dispMaster = 
-            (MapProjectionDisplay) viewManager.getMaster();
+            (MapProjectionDisplay)viewManager.getMaster();
+        
         try {
-          dispMaster.setMapProjection(getDataProjection());
+            dispMaster.setMapProjection(getDataProjection());
         } catch (Exception e) {
-          logException("problem setting MapProjection", e);
+            logException("problem setting MapProjection", e);
         }
 
         getIdv().getIdvUIManager().showDashboard();
@@ -180,9 +205,10 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         HashMap subset = null;
         Hashtable table = dataChoice.getProperties();
         MultiDimensionSubset dataSel =
-           (MultiDimensionSubset) table.get(MultiDimensionSubset.key);
+           (MultiDimensionSubset)table.get(MultiDimensionSubset.key);
+        
         if (dataSel != null) {
-          subset = dataSel.getSubset();
+            subset = dataSel.getSubset();
         }
         mp = source.getDataProjection(subset);
         return mp;
@@ -207,34 +233,42 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
 
     @Override public String toString() {
         return "[LinearCombo@" + Integer.toHexString(hashCode()) + 
-            ": sourceFile=" + sourceFile + "]";
+            ": sourceFile=" + sourceFile + ']';
     }
 
     public void moveSelector(final String id, final float wavenum) {
-        if (!selectorMap.containsKey(id))
+        if (!selectorMap.containsKey(id)) {
             return;
+        }
         display.updateControlSelector(id, wavenum);
     }
 
     public void updateSelector(final String id, final float wavenum) {
-        if (!selectorMap.containsKey(id))
+        if (!selectorMap.containsKey(id)) {
             return;
+        }
 
         selectorMap.get(id).setWaveNumber(wavenum);
-        String cmd = 
-            String.format("_linearCombo.moveSelector('%s', %f)", id, wavenum);
+        String cmd = new StringBuilder("_linearCombo.moveSelector('")
+            .append(id)
+            .append("', ")
+            .append(wavenum)
+            .append(')')
+            .toString();
+
         console.addPretendHistory(cmd);
     }
 
     protected void addSelector(final Selector selector) throws Exception {
         ConstantMap[] mapping = selector.getColor();
-        float r = new Double(mapping[0].getConstant()).floatValue();
-        float g = new Double(mapping[1].getConstant()).floatValue();
-        float b = new Double(mapping[2].getConstant()).floatValue();
+        float r = Double.valueOf(mapping[0].getConstant()).floatValue();
+        float g = Double.valueOf(mapping[1].getConstant()).floatValue();
+        float b = Double.valueOf(mapping[2].getConstant()).floatValue();
         Color javaColor = new Color(r, g, b);
         display.createSelector(selector.getId(), javaColor);
         display.setSelectorValue(selector.getId(), selector.getWaveNumber());
         selectorMap.put(selector.getId(), selector);
+        logger.trace("added selector={}", selector);
     }
 
     protected MultiSpectralDisplay getMultiSpectralDisplay() {
@@ -253,8 +287,9 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
 
         for (Iterator<Object> i = jython.iterator(); i.hasNext();) {
             Object obj = i.next();
-            if (!(obj instanceof Selector))
+            if (!(obj instanceof Selector)) {
                 continue;
+            }
 
             String selectorId = ((Selector)obj).getId();
             ids.add(selectorId);
@@ -263,6 +298,13 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         return ids;
     }
 
+    /**
+     * 
+     * 
+     * @param objMap
+     * 
+     * @return
+     */
     private Map<String, Selector> mapNamesToThings(final Map<String, Object> objMap) {
         assert objMap != null : objMap;
 
@@ -270,8 +312,9 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         Set<Selector> seen = new LinkedHashSet<Selector>();
         for (Map.Entry<String, Object> entry : objMap.entrySet()) {
             Object obj = entry.getValue();
-            if (!(obj instanceof Selector))
+            if (!(obj instanceof Selector)) {
                 continue;
+            }
 
             String name = entry.getKey();
             Selector selector = (Selector)obj;
@@ -295,8 +338,9 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         if (!data.hasBandNames())
            return map;
 
-        for (Entry<String, Float> entry : data.getBandNameMap().entrySet())
+        for (Entry<String, Float> entry : data.getBandNameMap().entrySet()) {
             map.__setitem__(entry.getKey(), new PyFloat(entry.getValue()));
+        }
 
         return map;
     }
@@ -304,7 +348,7 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
     public void addCombination(final String name, final Data combo) {
         source.addChoice(name, combo);
     }
-    
+
 //    public void addRealCombination(final String name, final Combination combo) {
 //        source.addRealCombo(name, combo, console);
 //    }
@@ -333,6 +377,7 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         }
 
         jythonMap = mapNamesToThings(javaObjects);
+        logger.trace("ranBlock: javaObjs={}", javaObjects);
     }
 
 //    public void saveJythonThings() {
@@ -350,10 +395,12 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         public abstract Data getData();
 
         public static String colorString(final ConstantMap[] color) {
-            if (color == null)
+            if (color == null) {
                 return "[null]";
-            if (color.length != 3)
+            }
+            if (color.length != 3) {
                 return "[invalid color string]";
+            }
 
             double r = color[0].getConstant();
             double g = color[1].getConstant();
@@ -362,32 +409,43 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         }
 
         private static Data extractData(final Object other) throws VisADException, RemoteException {
-            if (other instanceof JythonThing)
+            if (other instanceof JythonThing) {
                 return ((JythonThing)other).getData();
-            if (other instanceof PyFloat)
+            }
+            if (other instanceof PyFloat) {
                 return new Real(((PyFloat)other).getValue());
-            if (other instanceof PyInteger)
+            }
+            if (other instanceof PyInteger) {
                 return new Real(((PyInteger)other).getValue());
-            if (other instanceof Double)
+            }
+            if (other instanceof Double) {
                 return new Real((Double)other);
-            if (other instanceof Integer)
+            }
+            if (other instanceof Integer) {
                 return new Real((Integer)other);
-            if (other instanceof Data)
+            }
+            if (other instanceof Data) {
                 return (Data)other;
+            }
             throw new IllegalArgumentException("Can't figure out what to do with " + other);
         }
 
         private static String extractName(final Object other) {
-            if (other instanceof JythonThing)
+            if (other instanceof JythonThing) {
                 return ((JythonThing)other).getName();
-            if (other instanceof PyInteger)
+            }
+            if (other instanceof PyInteger) {
                 return ((PyInteger)other).toString();
-            if (other instanceof PyFloat)
+            }
+            if (other instanceof PyFloat) {
                 return ((PyFloat)other).toString();
-            if (other instanceof Double)
+            }
+            if (other instanceof Double) {
                 return ((Double)other).toString();
-            if (other instanceof Integer)
+            }
+            if (other instanceof Integer) {
                 return ((Integer)other).toString();
+            }
             throw new IllegalArgumentException("UGH: "+other);
         }
 
@@ -437,17 +495,43 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         }
     }
 
+    /**
+     * 
+     */
     public static class Selector extends JythonThing {
-        private final String ID = hashCode()+"_jython";
-        private float waveNumber = 0;
+
+        /** */
+        private final String ID;
+
+        /** */
+        private float waveNumber;
+
+        /** */
         private ConstantMap[] color;
+
+        /** */
         private Console console;
+
+        /** */
         private HydraControl control;
+
+        /** */
         private Data data;
+
+        /** */
         private MultiSpectralDisplay display;
 
+        /**
+         * 
+         * 
+         * @param waveNumber 
+         * @param color 
+         * @param control 
+         * @param console 
+         */
         public Selector(final float waveNumber, final ConstantMap[] color, final HydraControl control, final Console console) {
             super();
+            this.ID = hashCode() + "_jython";
             this.waveNumber = waveNumber;
             this.control = control;
             this.console = console;
@@ -464,37 +548,85 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
                 try {
                     lc.addSelector(this);
                 } catch (Exception e) {
+                    // TODO(jon): no way jose
                     System.err.println("Could not create selector: "+e.getMessage());
                     e.printStackTrace();
                 }
             }
         }
 
+        /**
+         * Attempts removal of a known name for the current Selector.
+         * 
+         * @param name Name (within Jython namespace) to remove.
+         * 
+         * @return {@code true} if removal was successful, {@code false} 
+         * otherwise.
+         */
         public boolean removeName(final String name) {
             return jythonNames.remove(name);
         }
 
+        /**
+         * Returns the known Jython names associated with this Selector.
+         * 
+         * @param {@literal "Names"} (aka variables) in a Jython namespace that
+         * refer to this Selector. Collection may be empty, but never 
+         * {@code null}.
+         */
         public Collection<String> getNames() {
             return new LinkedHashSet<String>(jythonNames);
         }
 
+        /**
+         * Resets the known names of a Selector.
+         */
         public void clearNames() {
             jythonNames.clear();
         }
 
+        /**
+         * Attempts to associate a Jython {@literal "variable"/"name"} with 
+         * this Selector.
+         * 
+         * @param name Name used within the Jython namespace. Cannot be 
+         * {@code null}.
+         * 
+         * @return {@code true} if {@code name} was successfully added, 
+         * {@code false} otherwise.
+         */
         public boolean addName(final String name) {
             return jythonNames.add(name);
         }
 
+        /**
+         * Returns a Jython name associated with this Selector. Consider using
+         * {@link #getNames()} instead.
+         * 
+         * @return Either a blank {@code String} if there are no associated 
+         * names, or the {@literal "first"} (iteration-order) name.
+         * 
+         * @see #getNames()
+         */
         public String getName() {
-            if (jythonNames.isEmpty())
+            if (jythonNames.isEmpty()) {
                 return "";
-            else
+            } else {
                 return jythonNames.iterator().next();
+            }
         }
 
-        public void setWaveNumber(final float newChannel) {
-            waveNumber = newChannel;
+        /**
+         * Changes the {@literal "selected"} wave number to the given value.
+         * 
+         * <p><b>WARNING:</b>no bounds-checking is currently being performed,
+         * but this is expected to change in the near future.</p>
+         * 
+         * @param newWaveNumber New wave number to associate with the current
+         * Selector.
+         */
+        public void setWaveNumber(final float newWaveNumber) {
+            waveNumber = newWaveNumber;
             try {
                 display.setSelectorValue(ID, waveNumber);
             } catch (Exception e) {
@@ -502,23 +634,53 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
             }
         }
 
+        /**
+         * Returns the {@literal "selected"} wave number associated with this
+         * Selector.
+         * 
+         * @return Wave number currently selected by this Selector.
+         */
         public float getWaveNumber() {
             return waveNumber;
         }
 
+        /**
+         * 
+         * 
+         * @return
+         */
         public ConstantMap[] getColor() {
             return color;
         }
 
+        /**
+         * 
+         * 
+         * @return 
+         */
         public Data getData() {
             return control.getMultiSpectralDisplay().getImageDataFrom(waveNumber);
         }
 
+        /**
+         * 
+         * 
+         * @return 
+         */
        public String getId() {
             return ID;
         }
 
+       /**
+        * 
+        * @return 
+        */
        @Override public String toString() {
+           int hashLen = 0;
+           int idLen = 0;
+           int waveLen = 0;
+           int colorLen = 0;
+           int namesLen = 0;
            return String.format("[Selector@%x: id=%s, waveNumber=%f, color=%s, jythonNames=%s]",
                hashCode(), ID, waveNumber, colorString(color), jythonNames);
            
@@ -549,32 +711,43 @@ public class LinearCombo extends HydraControl implements ConsoleCallback {
         }
 
         private static Data extractData(final Object obj) throws VisADException, RemoteException {
-            if (obj instanceof JythonThing)
+            if (obj instanceof JythonThing) {
                 return ((JythonThing)obj).getData();
-            if (obj instanceof PyFloat)
+            }
+            if (obj instanceof PyFloat) {
                 return new Real(((PyFloat)obj).getValue());
-            if (obj instanceof PyInteger)
+            }
+            if (obj instanceof PyInteger) {
                 return new Real(((PyInteger)obj).getValue());
-            if (obj instanceof Double)
+            }
+            if (obj instanceof Double) {
                 return new Real((Double)obj);
-            if (obj instanceof Integer)
+            }
+            if (obj instanceof Integer) {
                 return new Real((Integer)obj);
-            if (obj instanceof Data)
+            }
+            if (obj instanceof Data) {
                 return (Data)obj;
+            }
             throw new IllegalArgumentException("Can't figure out what to do with " + obj);
         }
 
         protected static String extractName(final Object obj) {
-            if (obj instanceof JythonThing)
+            if (obj instanceof JythonThing) {
                 return ((JythonThing)obj).getName();
-            if (obj instanceof PyFloat)
+            }
+            if (obj instanceof PyFloat) {
                 return ((PyFloat)obj).toString();
-            if (obj instanceof PyInteger)
+            }
+            if (obj instanceof PyInteger) {
                 return ((PyInteger)obj).toString();
-            if (obj instanceof Double)
+            }
+            if (obj instanceof Double) {
                 return ((Double)obj).toString();
-            if (obj instanceof Integer)
+            }
+            if (obj instanceof Integer) {
                 return ((Integer)obj).toString();
+            }
             throw new IllegalArgumentException("UGH: "+obj);
         }
 
